--- a/index.html
+++ b/index.html
@@ -18,12 +18,18 @@
                 <svg id="innovation-chart"></svg>
             </div>
             <div class="col">
-                <div class="row">
+                <br>
+                <br>
+                <br>
+                <span>
                     <svg id="pie-chart"></svg> 
-                </div>
-                <div class="row">
+                </span>
+                <br>
+                <br>
+                <br>
+                <span>
                     <svg id="bar-chart"></svg>   
-                </div>               
+                </span>               
             </div>
         </div>
     </div>
