--- a/index.html
+++ b/index.html
@@ -3,40 +3,22 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="icon" href="data:;base64,iVBORwOKGO=" />
     <link rel="stylesheet" href="css/style.css">
     <title>Comparison of Movies on Streaming Platforms</title>
 </head>
 <body>
-    <div class="container">
+    <div class="header">
         <h1>Comparison of Movies on Streaming Platforms</h1>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <svg id="innovation-chart"></svg>
-            </div>
-            <div class="col">
-                <br>
-                <br>
-                <br>
-                <span>
-                    <svg id="pie-chart"></svg> 
-                </span>
-                <br>
-                <br>
-                <br>
-                <span>
-                    <svg id="bar-chart"></svg>   
-                </span>               
-            </div>
+    <div class="charts">
+        <div class="row first">
+            <svg id="innovation-chart"></svg>
+            <svg id="pie-chart"></svg> 
+        </div>
+        <div class="row second">
+            <svg id="bar-chart"></svg>   
         </div>
     </div>
-    <div id="tooltip"></div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="js/d3.v6.min.js"></script>
     <script src="js/innovationChart.js"></script>
     <script src="js/pieChart.js"></script>
