--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <div class="charts">
         <div class="row first">
             <svg id="innovation-chart"></svg>
+            <div id="mpa-rating-button-container">
+            </div>
             <svg id="pie-chart"></svg> 
         </div>
         <div class="row second">
