--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/style.css">
-    <title>Comparison of Movies on Streaming Platforms</title>
+    <link rel="icon" type="image/png" href="images/favicon.png" sizes="16x16">
+    <title>Movie Streaming Comparator</title>
 </head>
 <body>
-    <div class="header">
-        <h1>Comparison of Movies on Streaming Platforms</h1>
-    </div>
     <div class="charts">
         <div class="row first">
             <svg id="innovation-chart"></svg>
