Re-arrange charts on page (#18)
Co-authored-by: Eric Kim <erickim195@gmail.com>

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 </head>
 <body>
     <div class="charts">
-        <div class="row first">
-            <svg id="innovation-chart"></svg>
-            <div id="mpa-rating-button-container">
+        <div class="row">
+            <div class="column first">
+                <svg id="innovation-chart"></svg>
+                <div id="mpa-rating-button-container">
             </div>
-            <svg id="pie-chart"></svg> 
-        </div>
-        <div class="row second">
-            <svg id="bar-chart"></svg>   
+            <div class="column second">
+                <svg id="pie-chart"></svg>
+                <svg id="bar-chart"></svg>
+            </div>
         </div>
     </div>
     <script src="js/d3.v6.min.js"></script>
