--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="images/favicon.png" sizes="16x16">
-    <title>Movie Streaming Comparator</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Palette+Mosaic&family=ZCOOL+KuaiLe&display=swap" rel="stylesheet">
+    <title>Comparison of Movies on Streaming Services</title>
 </head>
 <body>
     <video autoplay muted loop id="backgroundVideo">
         <source src="background.mp4" type="video/mp4">
     </video>
+    <img id="banner" src="banner.png" alt="banner image"/>
+    <h1 id="title">Comparison of Movies on Streaming Services</h1>
     <div class="charts">
         <div class="row">
             <div class="column first">
