--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="charts">
         <div class="row">
             <div class="column first">
-                <svg id="innovation-chart"></svg>
+                <svg id="grid-chart"></svg>
                 <div id="mpa-rating-button-container">
             </div>
             <div class="column second">
@@ -29,9 +29,12 @@
         </div>
     </div>
     <script src="js/d3.v6.min.js"></script>
-    <script src="js/innovationChart.js"></script>
-    <script src="js/pieChart.js"></script>
-    <script src="js/barChart.js"></script>
+    <script src="js/config/config.colors.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/charts/pie-chart-grid/MultiViewPieChart.js"></script>
+    <script src="js/charts/pie-chart-grid/GridChart.js"></script>
+    <script src="js/charts/pieChart.js"></script>
+    <script src="js/charts/barChart.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
