--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
     </video>
     <img id="banner" src="banner.png" alt="banner image"/>
     <h1 id="title">Comparison of Movies on Streaming Services</h1>
+    <div class="center">
+        <button type="button" class="btn btn-primary">G</button>
+        <button type="button" class="btn btn-primary">NC-17</button>
+        <button type="button" class="btn btn-primary">Not Rated</button>
+        <button type="button" class="btn btn-primary">PG</button>
+        <button type="button" class="btn btn-primary">PG-13</button>
+        <button type="button" class="btn btn-primary">R</button>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
     <div class="charts">
         <div class="row">
             <div class="column first">
