--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         </div>
     </div>
     <script src="js/d3.v6.min.js"></script>
+    <script src="js/ejj.v0.js"></script>
     <script src="js/config/config.colors.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/charts/pie-chart-grid/MultiViewPieChart.js"></script>
