legend works as joyce wants

--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
                 <td>
                     <span>
                         <ul class="pie-legend">
-                            <li class="pie-legend-btn" data-platform="Netflix">
+                            <li class="pie-legend-btn active" data-platform="Netflix">
                                 <span class="square" id="netflix" />&emsp;&ensp;Netflix
                             </li>
-                            <li class="pie-legend-btn" data-platform="Hulu">
+                            <li class="pie-legend-btn active" data-platform="Hulu">
                                 <span class="square" id="hulu" />&emsp;&ensp;Hulu
                             </li>
-                            <li class="pie-legend-btn" data-platform="Prime Video">
+                            <li class="pie-legend-btn active" data-platform="Prime Video">
                                 <span class="square" id="amazon" />&emsp;&ensp;Prime Video
                             </li>
-                            <li class="pie-legend-btn" data-platform="Disney+">
+                            <li class="pie-legend-btn active" data-platform="Disney+">
                                 <span class="square" id="disney" />&emsp;&ensp;Disney+
                             </li>
                         </ul>
