Integrat PieChart with EventHandlers

--- a/index.html
+++ b/index.html
@@ -38,26 +38,26 @@
                     <tr>
                         <td>
                     <svg id="pie-chart"></svg>
-                </td>
-                <td>
-                    <span>
-                        <ul class="pie-legend">
-                            <li class="pie-legend-btn active" data-platform="Netflix">
-                                <span class="square" id="netflix" />&emsp;&ensp;Netflix
-                            </li>
-                            <li class="pie-legend-btn active" data-platform="Hulu">
-                                <span class="square" id="hulu" />&emsp;&ensp;Hulu
-                            </li>
-                            <li class="pie-legend-btn active" data-platform="Prime Video">
-                                <span class="square" id="amazon" />&emsp;&ensp;Prime Video
-                            </li>
-                            <li class="pie-legend-btn active" data-platform="Disney+">
-                                <span class="square" id="disney" />&emsp;&ensp;Disney+
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
-            </table>
+                        </td>
+                        <td>
+                            <span>
+                                <ul class="pie-legend">
+                                    <li class="pie-legend-btn widget active" data-platform="Netflix">
+                                        <span class="square" id="netflix">Netflix</span>
+                                    </li>
+                                    <li class="pie-legend-btn widget active" data-platform="Hulu">
+                                        <span class="square" id="hulu">Hulu</span>
+                                    </li>
+                                    <li class="pie-legend-btn widget active" data-platform="Prime Video">
+                                        <span class="square" id="amazon">Prime Video</span>
+                                    </li>
+                                    <li class="pie-legend-btn widget active" data-platform="Disney+">
+                                        <span class="square" id="disney">Disney+</span>
+                                    </li>
+                                </ul>
+                            </td>
+                        </tr>
+                    </table>
                 <svg id="bar-chart"></svg>
             </div>
         </div>
