--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/input-range.css">
     <link rel="icon" type="image/png" href="images/favicon.png" sizes="16x16">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,6 +19,11 @@
             <div class="column first">
                 <div id="mpa-rating-button-container"></div>
                 <svg id="grid-chart"></svg>
+                <div class="range-slider-container">
+                    <section onchange="return applyYearRanges()" class="range-slider">
+                        <span class="rangeValues"></span>
+                    </section>
+                </div>
             </div>
             <div class="column second">
                 <p class="grid-chart-desc">
@@ -63,7 +69,9 @@
         </div>
     </div>
     <script src="js/lib/d3.v6.min.js"></script>
+    <script src="js/widgets/YearRangeSlider.js"></script>
     <script src="js/lib/ejj.v0.js"></script>
+    <script src="js/MovieData.js"></script>
     <script src="js/config/config.colors.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/charts/pie-chart-grid/MultiViewPieChart.js"></script>
