--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             </div>
         </div>
     </div>
+    <div id="pie-chart-tooltip"></div>
     <script src="js/lib/d3.v6.min.js"></script>
     <script src="js/widgets/YearRangeSlider.js"></script>
     <script src="js/lib/ejj.v0.js"></script>
