--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Comparison of Movies on Streaming Services</title>
 </head>
 <body>
-    <img id="banner" src="banner.png" alt="banner image"/>
+    <img id="banner" src="./images/banner.png" alt="banner image"/>
     <h1 id="title">Comparison of Movies on Streaming Services</h1>
     <div class="charts">
         <div class="row">
@@ -20,7 +20,7 @@
                 <div id="mpa-rating-button-container"></div>
                 <svg id="grid-chart"></svg>
                 <div class="range-slider-container">
-                    <section onchange="return applyYearRanges()" class="range-slider">
+                    <section class="range-slider">
                         <span class="rangeValues"></span>
                     </section>
                 </div>
@@ -40,45 +40,28 @@
                     
                     Each grid contains a pie chart showing the proportion of movies by platform for the intersection of the appropriate Financial Performance and Rotten Tomatoes Score.<br><br> 
                 </p>
-                <table>
-                    <tr>
-                        <td>
+                <div class="pie-chart-container">
                     <svg id="pie-chart"></svg>
-                        </td>
-                        <td>
-                            <span>
-                                <ul class="pie-legend">
-                                    <li class="pie-legend-btn widget" data-platform="Netflix">
-                                        <span class="square" id="netflix">Netflix</span>
-                                    </li>
-                                    <li class="pie-legend-btn widget" data-platform="Hulu">
-                                        <span class="square" id="hulu">Hulu</span>
-                                    </li>
-                                    <li class="pie-legend-btn widget" data-platform="Prime Video">
-                                        <span class="square" id="amazon">Prime Video</span>
-                                    </li>
-                                    <li class="pie-legend-btn widget" data-platform="Disney+">
-                                        <span class="square" id="disney">Disney+</span>
-                                    </li>
-                                </ul>
-                            </td>
-                        </tr>
-                    </table>
+                    <div id="pie-chart-legend"></div>
+                </div>
                 <svg id="bar-chart"></svg>
             </div>
         </div>
     </div>
     <div id="pie-chart-tooltip"></div>
     <script src="js/lib/d3.v6.min.js"></script>
+    <script src="js/utils/Config.js"></script>
+    <script src="js/widgets/Widget.js"></script>
+    <script src="js/widgets/PlatformLegend.js"></script>
+    <script src="js/widgets/MpaaButtons.js"></script>
     <script src="js/widgets/YearRangeSlider.js"></script>
-    <script src="js/lib/ejj.v0.js"></script>
-    <script src="js/MovieData.js"></script>
-    <script src="js/config/config.colors.js"></script>
-    <script src="js/utils.js"></script>
+    <script src="js/movie-data/MovieData.js"></script>
+    <script src="js/movie-data/FilteredData.js"></script>
+    <script src="js/utils/FilterHandler.js"></script>
     <script src="js/charts/pie-chart-grid/MultiViewPieChart.js"></script>
     <script src="js/charts/pie-chart-grid/GridChart.js"></script>
-    <script src="js/charts/pieChart.js"></script>
-    <script src="js/charts/barChart.js"></script>
+    <script src="js/charts/PieChart.js"></script>
+    <script src="js/charts/BarChart.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
