feat: Add tooltips for each pie chart with additional info (#64)
* Create MultiViewPieTip

* Refactor pie chart's tooltip into separate PieTip class

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         </div>
     </div>
     <div id="pie-chart-tooltip"></div>
+    <div id="multi-view-pie-chart-tooltip"></div>
     <script src="js/lib/d3.v6.min.js"></script>
     <script src="js/utils/Config.js"></script>
     <script src="js/widgets/Widget.js"></script>
@@ -58,6 +59,8 @@
     <script src="js/movie-data/MovieData.js"></script>
     <script src="js/movie-data/FilteredData.js"></script>
     <script src="js/utils/FilterHandler.js"></script>
+    <script src="js/tooltips/MultiViewPieTip.js"></script>
+    <script src="js/tooltips/PieTip.js"></script>
     <script src="js/charts/pie-chart-grid/MultiViewPieChart.js"></script>
     <script src="js/charts/pie-chart-grid/GridChart.js"></script>
     <script src="js/charts/PieChart.js"></script>
