M3 4 (added tooltips for barchart + merged with latest master) (#74)
* added data-category to checkbox and label for barchart

* added tooltip to bar chart

* Fix linting errors and remove unused helper

* Fix linting errors and remove unused helper

* Refactor BarTip to extend ToolTip

Co-authored-by: m3r1b <35186723+m3r1b@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             </div>
         </div>
     </div>
+    <div id="bar-chart-tooltip"></div>
     <div id="tooltip-container"></div>
     <script src="js/lib/d3.v6.min.js"></script>
     <script src="js/utils/Config.js"></script>
@@ -54,6 +55,7 @@
     <script src="js/tooltips/ToolTip.js"></script>
     <script src="js/tooltips/MultiViewPieTip.js"></script>
     <script src="js/tooltips/PieTip.js"></script>
+    <script src="js/tooltips/BarTip.js"></script>
     <script src="js/tooltips/GridXAxisLabelTip.js"></script>
     <script src="js/tooltips/GridYAxisLabelTip.js"></script>
     <script src="js/tooltips/GridYAxisMarkTip.js"></script>
