feat: Add reset button (#81)
* Adjust widget height

* Add reset button

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <svg id="grid-chart"></svg>
             </div>
             <div class="column second">
+                <div class="widget-container "id="reset-button" style="border:none;margin:0;"></div>
                 <div class="widget-container "id="pie-chart-legend">Platforms:</div>
                 <div class="widget-container "id="mpa-rating-button-container">MPA Ratings:</div>
                 <div class="widget-container "id="bar-chart-legend">Genres:</div>
@@ -49,6 +50,7 @@
     <script src="js/widgets/MpaButtons.js"></script>
     <script src="js/widgets/GenreLegend.js"></script>
     <script src="js/widgets/YearRangeSlider.js"></script>
+    <script src="js/widgets/ResetButton.js"></script>
     <script src="js/movie-data/MovieData.js"></script>
     <script src="js/movie-data/FilteredData.js"></script>
     <script src="js/utils/FilterHandler.js"></script>
